[gd_scene load_steps=12 format=3 uid="uid://dyl1u24g3ijwt"]

[ext_resource type="Script" uid="uid://hetngxyrg1ew" path="res://scenes/game.gd" id="1_uwrxv"]
[ext_resource type="PackedScene" uid="uid://b02ynnw41oert" path="res://scenes/ball.tscn" id="2_yqjtg"]
[ext_resource type="Script" uid="uid://dqj05fijsqioc" path="res://scenes/cup_visual.gd" id="3_lnu2h"]
[ext_resource type="Script" uid="uid://bwtc2gntnfdlt" path="res://scenes/next_ball_preview.gd" id="4_lbhrr"]
[ext_resource type="Script" uid="uid://bny0un5xte8" path="res://scenes/current_ball_ghost.gd" id="5_iywne"]
[ext_resource type="Script" uid="uid://bux5l6mjthj7l" path="res://scenes/merge_preview.gd" id="5_u5sy4"]
[ext_resource type="FontFile" uid="uid://ccn8nkkjktpb2" path="res://Font/bahnschrift.ttf" id="6_p57ef"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8cj0n"]
size = Vector2(20, 450)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uwrxv"]
size = Vector2(380, 20)

[sub_resource type="CircleShape2D" id="CircleShape2D_p57ef"]
radius = 16.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p57ef"]
size = Vector2(400, 500)

[node name="Game" type="Node2D"]
script = ExtResource("1_uwrxv")
ball_scene = ExtResource("2_yqjtg")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Cup" type="Node2D" parent="."]

[node name="WallLeft" type="StaticBody2D" parent="Cup"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cup/WallLeft"]
modulate = Color(0.7326874, 0.6965349, 0.6234534, 1)
position = Vector2(-180, 44)
shape = SubResource("RectangleShape2D_8cj0n")
debug_color = Color(1, 1, 1, 1)

[node name="WallRight" type="StaticBody2D" parent="Cup"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cup/WallRight"]
modulate = Color(0.7326874, 0.6965349, 0.6234534, 1)
position = Vector2(180, 44)
shape = SubResource("RectangleShape2D_8cj0n")
debug_color = Color(1, 1, 1, 1)

[node name="Floor" type="StaticBody2D" parent="Cup"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cup/Floor"]
modulate = Color(0.7326874, 0.6965349, 0.6234534, 1)
position = Vector2(0, 260)
shape = SubResource("RectangleShape2D_uwrxv")
debug_color = Color(1, 1, 1, 1)

[node name="CupVisual" type="Node2D" parent="Cup"]
script = ExtResource("3_lnu2h")

[node name="CornerLeft" type="StaticBody2D" parent="Cup"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cup/CornerLeft"]
position = Vector2(-180, -180)
shape = SubResource("CircleShape2D_p57ef")
disabled = true

[node name="CornerRight" type="StaticBody2D" parent="Cup"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cup/CornerRight"]
position = Vector2(180, -180)
shape = SubResource("CircleShape2D_p57ef")
disabled = true

[node name="GameArea" type="Area2D" parent="Cup"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cup/GameArea"]
position = Vector2(-0.5, 24)
shape = SubResource("RectangleShape2D_p57ef")

[node name="NextBallPreview" type="Node2D" parent="." node_paths=PackedStringArray("game")]
position = Vector2(260, -220)
script = ExtResource("4_lbhrr")
game = NodePath("..")

[node name="MergePreview" type="Node2D" parent="." node_paths=PackedStringArray("game")]
position = Vector2(329, -73)
script = ExtResource("5_u5sy4")
game = NodePath("..")

[node name="CurrentBallGhost" type="Node2D" parent="." node_paths=PackedStringArray("game")]
script = ExtResource("5_iywne")
game = NodePath("..")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="ScoreLabel" type="Label" parent="CanvasLayer"]
z_index = 100
offset_left = -540.0
offset_top = -300.0
offset_right = -479.0
offset_bottom = -277.0
scale = Vector2(2, 2)
theme_override_fonts/font = ExtResource("6_p57ef")
text = "Score: 0"
vertical_alignment = 1

[node name="GameOverLabel" type="Label" parent="CanvasLayer"]
visible = false
anchors_preset = -1
anchor_left = -0.187
anchor_top = -0.113000005
anchor_right = 0.187
anchor_bottom = 0.11400001
offset_left = -0.57598877
offset_top = 0.22400665
offset_right = -287.424
offset_bottom = -97.872
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3, 3)
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("6_p57ef")
text = "GAME OVER
Press \"R\" to reload"
horizontal_alignment = 1

[node name="BestLabel" type="Label" parent="CanvasLayer"]
offset_left = -540.0
offset_top = -220.0
offset_right = -445.0
offset_bottom = -197.0
scale = Vector2(2, 2)
theme_override_fonts/font = ExtResource("6_p57ef")
text = "Highscore: 0"
vertical_alignment = 1

[node name="AimButton" type="Button" parent="CanvasLayer"]
offset_left = -529.0
offset_top = 203.0
offset_right = -454.0
offset_bottom = 278.0
text = "Aim"

[connection signal="mouse_entered" from="Cup/GameArea" to="." method="_on_game_area_mouse_entered"]
[connection signal="mouse_exited" from="Cup/GameArea" to="." method="_on_game_area_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/AimButton" to="." method="_on_aim_button_pressed"]
